Fixed spacing issue on apply as a techer page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,7 +116,7 @@
   }
 
   .container-page-v6 {
-    @apply max-w-[1200px] mx-auto sm:mt-[50px] mt-10 sm:mb-[100px] mb-10;
+    @apply max-w-[1200px] mx-auto sm:mt-[50px] mt-10 sm:mb-[100px] mb-10 xl:px-0 px-10;
   }
 
   .animation-fade {
